# Daily_Report

./: .coverage  .env  .env.example  .gitignore  .pre-commit-config.yaml  DEVICE_CONFIG_OPTIMIZATION_IMPLEMENTATION.md  DEVICE_CONFIG_USER_EXPERIENCE_OPTIMIZATION.md  Dockerfile  MONTHLY_CONSUMPTION_ERROR_REPORT_OPTIMIZATION_ANALYSIS.md  Makefile  OPTIMIZATION_POINTS_ANALYSIS.md  PACKAGING_ARCHITECTURE.md  PACKAGING_GUIDE.md  PACKAGING_HANDBOOK.md  PACKAGING_INDEX.md  PACKAGING_README.md  QUICK_PACKAGING.md  README.md  ZR_Daily_Report.py  build_dist.py  build_package.py  check_report.py  config_encrypt.py  create_portable_package.py  db_handler.py  devices.csv  docker-compose.yml  install_deps.bat  install_deps.ps1  mkdocs.yml  mypy.ini  pip_config_instructions.md  pyproject.toml  pytest.ini  query_config_encrypted.json  remote_version.txt  requirements.txt  run-report.bat  run-report.ps1  run_report.bat  (+17 more)
.github/workflows/: ci-cd.yml
Daily_Report/docs/diagrams/: sequence_diagram.puml
MagicMock/Tk().tk.call().string/1665953087904/: 对账单处理日志_20250820_165640.txt  测试客户2025年07月对账单.xlsx
MagicMock/Tk().tk.call().string/2169993612320/: 对账单处理日志_20250820_165903.txt  测试客户2025年07月对账单.xlsx
MagicMock/Tk().tk.call().string/2458914490752/: 对账单处理日志_20250822_102747.txt
MagicMock/Tk().tk.call().string/2467294117040/: 对账单处理日志_20250818_142531.txt  测试客户2025年07月对账单.xlsx
MagicMock/Tk().tk.call().string/2576167733632/: 对账单处理日志_20250822_101345.txt
MagicMock/Tk().tk.call().string/2865669942176/: 对账单处理日志_20250822_103002.txt
config/: barrel_count_override.csv  error_summary_query.json  query_config.example.json  query_config.json  query_config_encrypted.json  query_config_template.json
data/: devices.csv
defect_fixes/: INDEX.md  README.md
docker-tests/: test_compatibility.py
docs/: build_guide.md  ci_cd_guide.md  code-quality.md  customer_statement_consistency_analysis.md  customer_statement_fix_analysis.md  customer_statement_fix_summary.md  customer_statement_implementation_details.md  customer_statement_template_fix.md  documentation_guidelines.md  environment_config.md  improvements.md  index.md  non_lan_access_guide.md  product_documentation.md  refactoring_assessment.md  release_plan.md  technical_documentation.md  template_structure_analysis.md  version_plan.md  web_sharing_instructions.md
docs/defect_fixes/: 20250808_config_file_reading_issue.md  20250808_statement_multiple_oil_issue.md  20250814_mysql_driver_memory_conflict_issue.md  20250817_inventory_chart_display_issue.md  defect_fixes_index.md
frozen_dist/: README.txt  install_report.bat  requirements.txt  run_report.bat
frozen_dist/zr_daily_report/: README.md  setup.py
frozen_dist/zr_daily_report/config/: query_config.json
frozen_dist/zr_daily_report/src/api/: routes.py
frozen_dist/zr_daily_report/src/cli/: argument_parser.py
frozen_dist/zr_daily_report/template/: statement_template.xlsx
release/: Dockerfile  docker-compose.yml
scripts/: analyze_template.py  build_docs.py  check_template_colors.py  generate_tests.py  inspect_template.py  run_code_quality.py  run_code_quality_selective.py  setup-git-hooks.py  test_compatibility.bat  test_compatibility.py  update_docs.py
src/: config.py  database.py  logger.py  main.py
src/cli/: argument_parser.py  mode_selector.py
src/core/: __init__.py  base_report.py  cache_handler.py  consumption_error_handler.py  customer_statement_generator.py  data_manager.py  db_handler.py  dependency_injection.py  device_config_manager.py  device_config_metadata.py  excel_handler.py  file_handler.py  inventory_handler.py  refueling_details_handler.py  report_controller.py  statement_handler.py
src/repositories/: device_repository.py
src/services/: report_service.py
src/ui/: __init__.py  date_dialog.py  device_filter_dialog.py  filedialog_selector.py  mode_selector.py  selector.py
src/utils/: __init__.py  config_encrypt.py  config_handler.py  data_validator.py  date_utils.py  ui_utils.py
src/web/: app.py
static/: main.js  style.css
template/: statement_template.xlsx
templates/: index.html
test_data/: README_device_config.md  device_config.csv  devices_test.csv
test_output/: test_无效数据测试.xlsx  test_空数据测试.xlsx  test_连续数据测试.xlsx
tests/: DEVICE_CONFIG_MANAGER_TEST_SUMMARY.md  README.md  TESTING.md  base_test.py  test_config_handler.py  test_core_consumption_error_handler.py  test_core_data_manager.py  test_core_db_handler.py  test_core_file_handler.py  test_core_inventory_handler.py  test_core_refueling_details_handler.py  test_core_report_controller.py  test_core_statement_handler.py  test_customer_statement_consistency.py  test_daily_consumption_report.py  test_db_connection.py  test_dependency_compatibility.py  test_device_config_manager.py  test_file_handler.py  test_integration.py  test_inventory_reports.py  test_monthly_consumption_report.py  test_statement_handler.py  test_ui_filedialog_selector.py  test_ui_mode_selector.py  test_utils_config_encrypt.py  test_utils_config_handler.py  test_utils_data_validator.py  test_utils_date_utils.py  test_utils_ui_utils.py  test_zr_daily_report.py
zr-daily-report-portable/: install.bat  run-report.bat
zr-daily-report-v0.7/: README.txt  install.bat  run-report.ps1  run-report.sh
zr-daily-report-v0.7/zr_daily_report/: README.md  requirements.txt
zr_daily_report_portable/: README.txt  install.bat  run_report.bat
zr_daily_report_portable/zr_daily_report/: ZR_Daily_Report.py  requirements.txt
zr_daily_report_portable/zr_daily_report/template/: statement_template.xlsx
(+17 files in other folders)
