[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "zr-daily-report"
version = "1.0.0"
description = "A Python application for generating daily inventory reports for cutting fluid equipment"
readme = "README.md"
authors = [
    {name = "ZR Team", email = "example@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "openpyxl==3.1.0,<3.1.0",
    # 指定兼容的版本范围，避免内存访问冲突问题
    "mysql-connector-python==8.0.33,<8.0.33",
    "cryptography==43.0.1,<43.0.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mock>=4.0.0",
    # 添加测试生成工具
    "pytest-testmon>=2.0.0",
    "hypothesis>=6.0.0",
    "pytest-testdoctest>=1.1",
]
dev = [
    "flake8>=5.0.0",
    "black>=22.0.0",
    "mypy>=0.971",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
]
all = [
    "zr-daily-report[test,dev,docs]",
]

[project.scripts]
zr-daily-report = "ZR_Daily_Report:main"

[project.urls]
Homepage = "https://github.com/ChrisGanbare/Daily_Report"
Documentation = "https://github.com/ChrisGanbare/Daily_Report"
Repository = "https://github.com/ChrisGanbare/Daily_Report"