[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zr-daily-report"
version = "1.0.0"
description = "A Python application for generating daily inventory reports for cutting fluid equipment"
readme = "README.md"
authors = [{name = "ZR Team", email = "example@example.com"}]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "openpyxl==3.1.0",
    "mysql-connector-python==8.0.33",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mock>=4.0.0",
]
dev = [
    "build>=0.10.0",
    "black>=22.0.0",
    "mypy>=0.971",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/ChrisGanbare/Daily_Report"

[project.scripts]
zr-report = "zr_daily_report:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "scripts*", "docker-tests*"]

[tool.setuptools.exclude-package-data]
"*" = [
    "tests/*",
    "scripts/*",
    "docker-tests/*",
    "test_*",
    "*_test.py",
    "pyproject.toml",
    "setup.py",
    "tox.ini",
    "pytest.ini",
    "mypy.ini",
    ".pre-commit-config.yaml",
    "Makefile",
    ".gitignore",
    ".coverage",
    "*.log"
]
