[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zr-daily-report"
version = "2.0.0"  # 版本升级
description = "A Web-based Python application for generating daily inventory reports for cutting fluid equipment"
readme = "README.md"
authors = [{name = "ZR Team", email = "example@example.com"}]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-dotenv",
    "SQLAlchemy==2.0.31",
    "aiomysql==0.2.0",
    "pandas",
    "openpyxl==3.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0", # FastAPI测试客户端需要
    "mock>=4.0.0",
]
dev = [
    "build>=0.10.0",
    "black>=24.0.0",
    "mypy>=0.971",
    "isort>=5.12.0",
    "tox>=3.25.0",
    "pre-commit>=3.3.0",
    "pyinstaller>=5.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/ChrisGanbare/Daily_Report"

[project.scripts]
# 更新入口点以指向新的Web应用启动器
zr-webreport = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
# 明确排除已废弃的ui模块
exclude = ["tests*", "scripts*", "docker-tests*", "src.ui*"]

[tool.setuptools.exclude-package-data]
"*" = [
    "tests/*",
    "scripts/*",
    "docker-tests/*",
    "test_*",
    "*_test.py",
    "pyproject.toml",
    "setup.py",
    "tox.ini",
    "pytest.ini",
    "mypy.ini",
    ".pre-commit-config.yaml",
    "Makefile",
    ".gitignore",
    ".coverage",
    "*.log"
]
